--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-19  Bart Cornelis <cobaco@linux.be>
+	
+	* nl.po: Updated Dutch translation.
+
 2006-02-19  Miguel Figueiredo <elmig@debianpt.org>
 
 	* pt.po: Updated to 720t.
