Updated Dutch translations

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,11 +7,13 @@ dpkg (1.13.17~) UNRELEASED; urgency=low
 
   [ Updated dselect Translations ]
   * hu.po (SZERVÁC Attila).
-  
+  * nl.po Bart Cornelis (cobaco)
+
   [ Updated dpkg Translations ]
   * zh_CN.po (Carlos Z.F. Liu).
+  * nl.po Bart Cornelis (cobaco)
 
- -- Frank Lichtenheld <frank@lichtenheld.de>  Sat, 18 Feb 2006 19:01:24 +0100
+ -- Bart Cornelis (cobaco) <cobaco@linux.be>  Sun, 19 Feb 2006 13:07:43 +0100
 
 dpkg (1.13.16) unstable; urgency=low
 
