The ChangeLog police is hiring mercenaries. Apply now!
Added missing portuguese entries.
Fixing format.

--- a/ChangeLog
+++ b/ChangeLog
@@ -24,15 +24,14 @@
 
 	* man/ChangeLog: Start an own changelog for the
 	manpages.
-	
+
 	* scripts/dpkg-scanpackages.pl: Fix override handling
 	which was broken by the latest changes.
 
 	* scripts/dpkg-gencontrol.pl: Make -isp the default
- 	behaviour.
+	behaviour.
 	* man/C/dpkg-source.1: Document the behaviour
- 	change in dpkg-gencontrol.
-
+	change in dpkg-gencontrol.
 
 2006-02-17  Guillem Jover  <guillem@debian.org>
 
@@ -62,7 +61,7 @@
 
 2006-02-16  Frank Lichtenheld  <djpig@debian.org>
 
-	* configure.ac: Bump version to 1.13.16~
+	* configure.ac: Bump version to 1.13.16~.
 
 2006-02-15  Frank Lichtenheld  <djpig@debian.org>
 
@@ -82,7 +81,7 @@
 
 2006-02-12  Frank Lichtenheld  <djpig@debian.org>
 
-	* configure.ac: Bump version to 1.13.15~
+	* configure.ac: Bump version to 1.13.15~.
 
 	* configure.ac: Release 1.13.14.
 
@@ -103,10 +102,10 @@
 
 2006-02-11  Nicolas François  <nicolas.francois@centraliens.net>
 
-	* man/*/*.addendum: use a generic position to insert the addenda,
+	* man/*/*.addendum: Use a generic position to insert the addenda,
 	which should always exist in a valid man page.
 	Translators are free to use another position.
-	* man/*/*.addenum: renamed man/*/*.addendum.
+	* man/*/*.addenum: Renamed man/*/*.addendum.
 
 2006-02-11  Frank Lichtenheld  <djpig@debian.org>
 
@@ -1290,7 +1289,7 @@
 	* scripts/Makefile.am (do_perl_subst): Replace occurances of
 	$pkgdatadir in scripts with the right value.
 
-2005-01-22  Robert Millan  <rmh@debian.org>,
+2005-01-22  Robert Millan  <rmh@debian.org>
 
 	* configure.ac: Check for kvm.h.
 	* utils/start-stop-daemon.c: Remove includes for <sys/user.h>,
