--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,9 +1,9 @@
 2006-02-19  Philippe Batailler  <philippe.batailler@free.fr>
 
-	* fr/dpkg-source.1.fr.po: Updated
-	* fr/dpkg.1.fr.po: Updated
-	* fr/dpkg-query.1.fr.po: Updated
-	* fr/dpkg-name.1.fr.po: Updated
+	* fr/dpkg-source.1.fr.po: Updated.
+	* fr/dpkg.1.fr.po: Likewise.
+	* fr/dpkg-query.1.fr.po: Likewise.
+	* fr/dpkg-name.1.fr.po: Likewise.
 
 2006-02-18  Frank Lichtenheld  <djpig@debian.org>
 
