--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,12 +1,12 @@
-2006-02-19  Bart Cornelis <cobaco@linux.be>
-	
-	* nl.po: Updated Dutch translation.
+2006-02-19  Bart Cornelis  <cobaco@linux.be>
 
-2006-02-19  Miguel Figueiredo <elmig@debianpt.org>
+	* nl.po: Updated to 729t.
+
+2006-02-19  Miguel Figueiredo  <elmig@debianpt.org>
 
 	* pt.po: Updated to 720t.
 
-2006-02-19  Carlos Z.F. Liu <carlosliu@users.sourceforge.net>
+2006-02-19  Carlos Z.F. Liu  <carlosliu@users.sourceforge.net>
 
 	* zh_CN.po: Updated to 729t. (finished)
 
