Move README for translators to the top level dir, now that we have specific ChangeLog per translation unit subdir, also it gets more visible. Update with latest rules and files.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-02-19  Guillem Jover  <guillem@debian.org>
+
+	* po/READNE.translators: Move to ...
+	* README.translators: ... here. Formatting fixes. Update to refer
+	to latest new ChangeLog files, and rules.
+
 2006-02-19  Frank Lichtenheld  <djpig@debian.org>
 
 	* scripts/dpkg-scanpackages.pl: Fix option
