More ChangeLog action.

--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,10 +1,10 @@
-2006-02-19  Bart Cornelis <cobaco@linux.be>
+2006-02-19  Bart Cornelis  <cobaco@linux.be>
 
-	* Updated Dutch translation
+	* nl.po: Updated to 286t.
 
 2006-02-18  SZERVÁC Attila  <sas@321.hu>
 
-	* hu.po: 192t94u
+	* hu.po: Updated to 192t94u.
 
 2006-02-17  Guillem Jover  <guillem@debian.org>
 
