Add missing parentheses surrounding a man page section reference in the dpkg-source man page (Matt Kraai). Closes: #353731

--- a/man/C/po/dpkg-source.1.pot
+++ b/man/C/po/dpkg-source.1.pot
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2006-02-17 16:48+0100\n"
+"POT-Creation-Date: 2006-02-20 21:00+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -135,7 +135,7 @@ msgid ""
 "shlibs.local>, B</etc/dpkg/shlibs.override>, the B<shlibs> control area file "
 "of the package containing the file which B<objdump> reports as satisfying "
 "the library dependency, or B</etc/dpkg/shlibs.default>.  The first match "
-"will be used.  See B<dpkg-shlibdeps>1 for details of the format of shared "
+"will be used.  See B<dpkg-shlibdeps>(1)  for details of the format of shared "
 "library dependency files."
 msgstr ""
 
