--- a/man/fr/dpkg-source.1.fr.po
+++ b/man/fr/dpkg-source.1.fr.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg.1\n"
-"POT-Creation-Date: 2006-02-17 16:48+0100\n"
-"PO-Revision-Date: 2006-02-19 09:48+0100\n"
+"POT-Creation-Date: 2006-02-20 21:00+0200\n"
+"PO-Revision-Date: 2006-02-20 21:17+0200\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -143,7 +143,7 @@ msgid ""
 "shlibs.local>, B</etc/dpkg/shlibs.override>, the B<shlibs> control area file "
 "of the package containing the file which B<objdump> reports as satisfying "
 "the library dependency, or B</etc/dpkg/shlibs.default>.  The first match "
-"will be used.  See B<dpkg-shlibdeps>1 for details of the format of shared "
+"will be used.  See B<dpkg-shlibdeps>(1)  for details of the format of shared "
 "library dependency files."
 msgstr ""
 "B<dpkg-shlibdeps> calcule, pour les exécutables nommés dans ses arguments, "
@@ -156,9 +156,9 @@ msgstr ""
 "local>, B</etc/dpkg/shlibs.override>, le fichier B<shlibs>, (fichier du "
 "paquet contenant un fichier qui, selon B<objdump,> satisfait au système de "
 "dépendance envers les bibliothèques) ou bien B</etc/dpkg/shlibs.default.> Le "
-"premier trouvé est utilisé. Voyez B<dpkg-"
-"shlibdeps>1B<pour>desB<précisions>surB<le>formatB<des>fichiers qui traitent "
-"des dépendances envers les bibliothèques partagées."
+"premier trouvé est utilisé. Voyez B<dpkg-shlibdeps>(1) pour des précisions "
+"sur le format des fichiers qui traitent des dépendances envers les "
+"bibliothèques partagées."
 
 # type: Plain text
 #: dpkg-source.1:73
