--- a/man/C/dpkg-source.1
+++ b/man/C/dpkg-source.1
@@ -62,7 +62,7 @@ control area file of the package containing the file which
 reports as satisfying the library dependency, or
 .BR /etc/dpkg/shlibs.default .
 The first match will be used.  See
-.BR dpkg-shlibdeps 1
+.BR dpkg-shlibdeps (1)
 for details of the format of shared library dependency files.
 
 .B dpkg\-genchanges
