--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,11 @@
+2006-02-20  Matt Kraai  <kraai@ftbfs.org>
+
+	* C/dpkg-source.1: Add missing parentheses around manpage section
+	number.
+	* C/po/dpkg-source.1.pot: Update.
+	* es/dpkg-source.1.es.po: Likewise.
+	* fr/dpkg-source.1.fr.po: Likewise.
+
 2006-02-19  Philippe Batailler  <philippe.batailler@free.fr>
 
 	* fr/dpkg-source.1.fr.po: Updated.
