Polish man pages translation update

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,9 +6,12 @@ dpkg (1.13.17~) UNRELEASED; urgency=low
     even those of binary packages. Closes: #252657, #324741, #347819
   * More dpkg-scanpackages fixes (--arch option handling). Closes: #353506
 
-  [ Guillem Jove ]
+  [ Guillem Jover ]
   * Add missing parentheses surrounding a man page section reference
     in the dpkg-source man page (Matt Kraai). Closes: #353731
+
+  [ Updated man pages translations ]
+  * Polish (Robert Luberda). Closes: #353782
 
   [ Updated dselect Translations ]
   * Hungarian (SZERVÁC Attila).
