--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-21  Robert Luberda  <robert@debian.org>
+
+	* pl/*: Updated.
+
 2006-02-20  Matt Kraai  <kraai@ftbfs.org>
 
 	* C/dpkg-source.1: Add missing parentheses around manpage section
