--- a/man/hu/dpkg.cfg.5.hu.po
+++ b/man/hu/dpkg.cfg.5.hu.po
@@ -2,11 +2,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2006-02-18 12:51+0100\n"
-"PO-Revision-Date: 2006-02-15 20:39+0100\n"
-"Last-Translator: SZERV√ëC Attila <sas@321.hu>\n"
+"PO-Revision-Date: 2006-02-21 12:05+0100\n"
 "Language-Team: hu\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=iso-8859-2\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-Language: Hungarian\n"
 "X-Poedit-Country: HUNGARY\n"
@@ -21,7 +20,7 @@ msgstr "DPKG.CFG"
 #: dpkg.cfg.5:1
 #, no-wrap
 msgid "February 2002"
-msgstr "2002 Febru√°r"
+msgstr "2002 Febru·r"
 
 # type: TH
 #: dpkg.cfg.5:1
@@ -33,43 +32,35 @@ msgstr "Debian Project"
 #: dpkg.cfg.5:1
 #, no-wrap
 msgid "dpkg suite"
-msgstr "dpkg k√©szlet"
+msgstr "dpkg kÈszlet"
 
 # type: SH
 #: dpkg.cfg.5:2
 #, no-wrap
 msgid "NAME"
-msgstr "N√âV"
+msgstr "N…V"
 
 # type: Plain text
 #: dpkg.cfg.5:4
 msgid "dpkg.cfg - dpkg configuration file"
-msgstr "dpkg.cfg - dpkg konfigur√°ci√≥s f√°jl"
+msgstr "dpkg.cfg - dpkg konfigur·ciÛs f·jl"
 
 # type: SH
 #: dpkg.cfg.5:4
 #, no-wrap
 msgid "DESCRIPTION"
-msgstr "LE√çR√ÅS"
+msgstr "LEÕR¡S"
 
 # type: Plain text
 #: dpkg.cfg.5:10
-msgid ""
-"This file contains default options for dpkg. Each line contains a single "
-"option which is exactly the same as a normal command line option for dpkg "
-"except for the leading dashes which are not used here. Comments are allowed "
-"by starting a line with a hash sign (\"B<#>\")."
-msgstr ""
-"E f√°jl tartalmazza a dpkg alapbe√°ll√≠t√°sait. Minden sor 1 lehet≈ës√©get "
-"tartalmaz, mely pontosan megfelel a sima parancssoros dpkg lehet≈ës√©geknek "
-"kiv√©ve a vezet≈ë k√∂t≈ëjeleket, melyek itt nincsenek. Megjegyz√©sek egy sor "
-"elej√©n a (\"B<#>\") jellel lehets√©gesek."
+msgid "This file contains default options for dpkg. Each line contains a single option which is exactly the same as a normal command line option for dpkg except for the leading dashes which are not used here. Comments are allowed by starting a line with a hash sign (\"B<#>\")."
+msgstr "E f·jl tartalmazza a dpkg alapbe·llÌt·sait. Minden sor 1 lehetısÈget tartalmaz, mely pontosan megfelel a sima parancssoros dpkg lehetısÈgeknek kivÈve a vezetı kˆtıjeleket, melyek itt nincsenek. MegjegyzÈsek egy sor elejÈn a (\"B<#>\") jellel lehetsÈgesek."
 
 # type: SH
 #: dpkg.cfg.5:10
 #, no-wrap
 msgid "FILES"
-msgstr "F√ÅJLOK"
+msgstr "F¡JLOK"
 
 # type: Plain text
 #: dpkg.cfg.5:13
@@ -80,25 +71,21 @@ msgstr "I</etc/dpkg/dpkg.cfg> ~/.dpkg.cfg"
 #: dpkg.cfg.5:13
 #, no-wrap
 msgid "AUTHOR"
-msgstr "SZERZ≈ê"
+msgstr "SZERZ’"
 
 # type: Plain text
 #: dpkg.cfg.5:16
-msgid ""
-"See B</usr/share/doc/dpkg/THANKS> for the list of people who have "
-"contributed to B<dpkg> ."
-msgstr ""
-"L√°sd a B</usr/share/doc/dpkg/THANKS> f√°jlt, melyben a B<dpkg> program "
-"elk√©sz√≠t√©s√©t seg√≠t≈ë szem√©lyek list√°ja tal√°lhat√≥."
+msgid "See B</usr/share/doc/dpkg/THANKS> for the list of people who have contributed to B<dpkg> ."
+msgstr "L·sd a B</usr/share/doc/dpkg/THANKS> f·jlt, melyben a B<dpkg> program elkÈszÌtÈsÈt segÌtı szemÈlyek list·ja tal·lhatÛ."
 
 # type: SH
 #: dpkg.cfg.5:16
 #, no-wrap
 msgid "SEE ALSO"
-msgstr "L√ÅSD M√âG"
+msgstr "L¡SD M…G"
 
 # type: Plain text
 #: dpkg.cfg.5:17
-#, fuzzy
 msgid "B<dpkg>(1)"
-msgstr "B<dpkg>(8)"
+msgstr "B<dpkg>(1)"
+
