--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-21  Miguel Figueiredo <elmig@debianpt.org>
+
+	* pt.po: Updated to 723t.
+
 2006-02-19  Bart Cornelis  <cobaco@linux.be>
 
 	* nl.po: Updated to 729t.
