--- a/debian/changelog
+++ b/debian/changelog
@@ -21,6 +21,7 @@ dpkg (1.13.17~) UNRELEASED; urgency=low
   * Simplified Chinese (Carlos Z.F. Liu).
   * Portuguese (Miguel Figueiredo).
   * Dutch (Bart Cornelis).
+  * Hungarian (sas-guest).
 
  -- Bart Cornelis (cobaco) <cobaco@linux.be>  Sun, 19 Feb 2006 13:07:43 +0100
 
