Fix missspelling of "occurred" as "occoured" in dpkg-gencontrol and dpkg-source (Matt Kraai). Closes: #353949

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-02-28  Matt Kraai  <kraai@ftbfs.org>
+
+	* scripts/dpkg-gencontrol.pl: Fix typo (occoured -> occurred).
+	* scripts/dpkg-source.pl: Likewise.
+
 2006-02-19  Guillem Jover  <guillem@debian.org>
 
 	* po/READNE.translators: Move to ...
