The changelog police is back.

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,7 +5,7 @@
 
 2006-02-19  Guillem Jover  <guillem@debian.org>
 
-	* po/READNE.translators: Move to ...
+	* po/README.translators: Move to ...
 	* README.translators: ... here. Formatting fixes. Update to refer
 	to latest new ChangeLog files, and rules.
 
