--- a/debian/changelog
+++ b/debian/changelog
@@ -16,14 +16,14 @@ dpkg (1.13.17~) UNRELEASED; urgency=low
   * Polish (Robert Luberda). Closes: #353782
 
   [ Updated dselect Translations ]
-  * Hungarian (SZERVÁC Attila).
+  * Hungarian (Szervác Attila).
   * Dutch (Bart Cornelis).
 
   [ Updated dpkg Translations ]
   * Simplified Chinese (Carlos Z.F. Liu).
   * Portuguese (Miguel Figueiredo).
   * Dutch (Bart Cornelis).
-  * Hungarian (sas-guest).
+  * Hungarian (Szervác Attila).
 
  -- Bart Cornelis (cobaco) <cobaco@linux.be>  Sun, 19 Feb 2006 13:07:43 +0100
 
