--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,8 +1,8 @@
-2006-02-21  sas-guest <sas@321.hu>
+2006-02-21  Szervác Attila  <sas@321.hu>
 
 	* hu.po: 2 small bugfixes & little improvements
 
-2006-02-21  Miguel Figueiredo <elmig@debianpt.org>
+2006-02-21  Miguel Figueiredo  <elmig@debianpt.org>
 
 	* pt.po: Updated to 723t.
 
