--- a/man/C/dpkg.1
+++ b/man/C/dpkg.1
@@ -267,7 +267,7 @@ See \fBdpkg\-deb\fP(1) for more information about the following actions.
 .fi
 
 .TP
-\fBdpkg\-query-actions\fP
+\fBdpkg\-query\-actions\fP
 See \fBdpkg\-query\fP(1) for more information about the following actions.
 
 .nf
@@ -604,6 +604,7 @@ following packages: \fIapt\fR, \fIaptitude\fR and \fIdebsums\fR.
 .SH SEE ALSO
 \fBdselect\fP(1),
 \fBdpkg\-deb\fP(1),
+\fBdpkg\-query\fP(1),
 \fBdeb\fP(5),
 \fBdeb\-control\fP(5),
 \fBdpkg.cfg\fP(5),
