--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,5 +1,9 @@
 2006-02-28  Guillem Jover  <guillem@debian.org>
 
+	* C/dpkg.1 (SEE ALSO): Add dpkg-query(1).
+
+2006-02-28  Guillem Jover  <guillem@debian.org>
+
 	* C/822-date.1: Lower case title header. Put options in bold, files
 	and arguments to options in italic. Escape hyphens used un command
 	line. Unescape dashes. Remove spaces after full stops and after end
