--- a/debian/changelog
+++ b/debian/changelog
@@ -12,7 +12,7 @@ dpkg (1.13.17~) UNRELEASED; urgency=low
   * Fix missspelling of "occurred" as "occoured" in dpkg-gencontrol and
     dpkg-source (Matt Kraai). Closes: #353949
   * Major cleanup of manpages, by using properly the bold and italic
-    attributes and other embellishments. Closes: #354645
+    attributes and other embellishments.
   * Add dpkg-query(1) in the SEE ALSO section in dpkg(1). Closes: #354643
 
   [ Updated man pages translations ]
